--- a/app/src/app/store/pages/home/home.component.html
+++ b/app/src/app/store/pages/home/home.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div>
-                <button type="button" class="btn btn-light">Cerrar sesion</button>
+                <button type="button" class="btn btn-light" (click)="logout()">Cerrar sesion</button>
             </div>
         </div>
     </nav>
