colocando valores iniciales a la app

--- a/app/src/app/auth/pages/login/login.component.html
+++ b/app/src/app/auth/pages/login/login.component.html
@@ -12,5 +12,8 @@
                 [ngModel]="initForm.password">
         </div>
         <button type="subtmit" class="btn btn-primary mt-3">Iniciar Sesion</button>
+
+        <a routerLink="/auth/register" class="navbar-brand text-center mt-4" >Ir al Registro</a>
+
     </fieldset>
 </form>
