--- a/app/src/app/auth/pages/register/register.component.html
+++ b/app/src/app/auth/pages/register/register.component.html
@@ -17,5 +17,8 @@
                 [ngModel]="initForm.password">
         </div>
         <button type="subtmit" class="btn btn-primary mt-3">Registro</button>
+
+        <a routerLink="/auth/login" class="navbar-brand text-center mt-4" >Ir al Login</a>
+
     </fieldset>
 </form>
